--- a/public/index.html
+++ b/public/index.html
@@ -40,12 +40,18 @@
             <button type="button" name="button" class="deleteNoteButton"></button>
           </div>
           <div class="newNote">
-            <button type="button" name="button" class="newClassButton"></button>
+            <label for="newNote">new note</label>
+            <input type="text" name="" value="">
             <div class="saveNote">
               <button type="button" name="button" class="saveNoteButton"></button>
             </div>
           </div>
         </div>
       </main>
+      <footer>
+        <div class="copyright">
+          <h4>footer</h4>
+        </div>
+      </footer>
   </body>
 </html>
