--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="newNote">
             <label for="newNote">new note</label>
-            <input type="text" name="" value="">
+            <input class="newNoteText"type="text" name="" value="">
             <div class="saveNote">
               <button type="button" name="button" class="saveNoteButton"></button>
             </div>
