--- a/public/signup.html
+++ b/public/signup.html
@@ -24,8 +24,8 @@
             <a href="index.html"><img class="masthead-brand main-logo" src="https://www.liberty.edu/brickcampaign/images/your_logo.png"></a>
             <nav>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="signup.html">Sign Up</a></li>
                 <li><a href="login.html">Login</a></li>
               </ul>
             </nav>
@@ -33,12 +33,7 @@
         </div>
 
         <div class="inner cover">
-          <h1 class="cover-heading">Any Introduction for this page</h1>
-          <p class="lead">Johnny: Hi. Florist: Can I help you? Johnny: (removing sunglasses) Yeah, can I have a dozen red roses, please? Florist: Oh hi, Johnny, I didn’t know it was you. Here you go. Johnny: That’s me! How much is it? Florist: It’ll be eighteen dollars.
-            Johnny: Here you go, keep the change. Hi doggy! Florist: You’re my favorite customer. Johnny: Thanks a lot, bye! Florist: Bye bye! - The Room -</p>
-          <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Learn more</a>
-          </p>
+          <p>SIGN ME UP</p>
         </div>
 
         <div class="mastfoot">
