refactored delete function to work with new changes on master as of mon 3:50 pm

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <div class="notesAndEvents container center">
 
           <div class="displayEvents container col-md-6">
-            <input type="button" name="Add Event" value="addEvent" class="addEvent">
+            <input type="button" name="Add Event" value="addEvent" class="addEvent" onclick="addEvent()">
 
 
             <table class="eventTable">
@@ -70,7 +70,7 @@
 
           <div class="displayNotes container col-md-6">
 
-            <input type="button" name="Add Note" value="addNote" class="addNote" onclick="getNotes()">
+            <input type="button" name="Add Note" value="addNote" class="addNote" onclick="addNote()">
 <!-- lintered showed a little err with 73 so added an onCLick().. -->
             <table class="noteTable">
 
