--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,3 @@
-
-
-
-<!-- page begin -->
 <!DOCTYPE html>
 <html>
 
@@ -54,11 +50,11 @@
 
           <div class="displayEvents container col-md-6">
 
-            <button type="button" name="addEvent" data-toggle="modal" data-target="#addEventModal" onclick="addEvent()">Add</button>            <textarea name="newEvent" rows="8" cols="70"></textarea>
+            <button type="button" name="addEvent" data-toggle="modal" data-target="#addEventModal" onclick="addEvent()">Add Event</button>
 
 
             <table class="eventTable">
-              <input type="button" name="All" value="All" class="allEvents" onclick="getEvents()">
+              <input type="button" name="All Events" value="All" class="allEvents" onclick="getEvents()">
 
               <tbody class="eventsTableBody">
                 <!-- append event table rows here -->
@@ -70,11 +66,11 @@
           </div>
 
           <div class="displayNotes container col-md-6">
-            <button type="button" name="addNote" data-toggle="modal" data-target="#addModal" onclick="addNote()">Add</button>
+            <button type="button" name="addNote" data-toggle="modal" data-target="#addModal" onclick="addNote()">Add Note</button>
             <!-- <input type="button" name="Add Note" value="addNote" class="addNote" onclick="addNote()"> -->
-            <textarea name="newNote" rows="8" cols="70"></textarea>
 
-            <input type="button" name="Add Note" value="addNote" class="addNote" onclick="addNote()">
+
+            <!-- <input type="button" name="Add Note" value="addNote" class="addNote" onclick="addNote()"> -->
 <!-- lintered showed a little err with 73 so added an onCLick().. -->
             <table class="noteTable">
 
