--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
 
           <form class="form-signin">
             <h2 class="form-signin-heading">Please sign in</h2>
-                <label for="inputEmail" class="sr-only">Email address</label>
+                <label for="inputUsername" class="sr-only">Username</label>
                 <input type="username" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
