Joins error solved

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <a href="index.html"><img class="masthead-brand main-logo" src="https://www.liberty.edu/brickcampaign/images/your_logo.png"></a>
+              <a href="index.html"><img class="masthead-brand main-logo" style="border-radius:50px;"src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAKTAAAAJDE1ODBjMTljLWU2MDMtNDI5Zi1iYjE1LTYwZjQ0Y2VmZDM4OQ.jpg"></a>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
