add the damn retrograde message

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
           </div>
           <div class="inner cover">
             <h1 class="cover-heading">XNOTE</h1>
+            <div class="isRetrograde"></div>
             <p class="lead">pull yourself together.</p>
           </div>
 <!-- start body container -->
