--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
-              <a href="index.html"><img class="masthead-brand main-logo" src="https://www.liberty.edu/brickcampaign/images/your_logo.png"></a>
+              <a href="index.html"><img class="masthead-brand main-logo" src="assets/css/images/xnoteLogo.png"></a>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index.html">Home</a></li>
