--- a/public/login.html
+++ b/public/login.html
@@ -40,7 +40,7 @@
                 <input type="username" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-            <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="login()">Sign in</button>
+            <button class="btn btn-lg  btn-block" type="submit" onclick="login()">Sign in</button>
           </form>
 
         </div>
