--- a/public/signup.html
+++ b/public/signup.html
@@ -45,7 +45,7 @@
                   <label for="createPassword" class="sr-only">Password</label>
                   <input type="password" id="createPassword" class="form-control" placeholder="Password" required="">
 
-              <button class="btn btn-lg btn-primary btn-block" type="submit" onclick="signUp()">Sign up!</button>
+              <button class="btn btn-lg  btn-block" type="submit" onclick="signUp()">Sign up!</button>
             </form>
 
           </div>
