--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
 
         <div class="masthead clearfix">
           <div class="inner">
-            <a href="index.html"><img class="masthead-brand main-logo" src="https://www.liberty.edu/brickcampaign/images/your_logo.png"></a>
+            <a href="index.html"><img class="masthead-brand main-logo" src="assets/css/images/xnoteLogo.png"></a>
             <nav>
               <ul class="nav masthead-nav">
                 <li><a href="index.html">Home</a></li>
