--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <div class = "bodyContainer container center">
             <div class="currentUser">
           <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-          <h3>Current User</h3>
+          <h3 class="currentUsername"></h3>
         </div>
 
 
