--- a/public/signup.html
+++ b/public/signup.html
@@ -38,10 +38,10 @@
 
             <form class="form-signup">
               <h2 class="form-signup-heading">Please sign up</h2>
-                  <label for="createEmail" class="sr-only">Choose a Username:</label>
-                  <input type="email" id="createEmail" class="form-control" placeholder="Email" required="" autofocus="">
-                  <label for="createUsername" class="sr-only">Choose a Username:</label>
+                  <label for="createUsername" class="sr-only">Choose a  Username:</label>
                   <input type="username" id="createUsername" class="form-control" placeholder="Username" required="" autofocus="">
+                  <label for="createEmail" class="sr-only">Enter your email:</label>
+                  <input type="email" id="createEmail" class="form-control" placeholder="Email" required="" autofocus="">
                   <label for="createPassword" class="sr-only">Password</label>
                   <input type="password" id="createPassword" class="form-control" placeholder="Password" required="">
 
